Small UI changes, change to register page, donut chart added to trade view (not doing anything yet)

--- a/src/main/webapp/resources/js/views/LogReg.html
+++ b/src/main/webapp/resources/js/views/LogReg.html
@@ -102,10 +102,10 @@
                                             <input type="password" ng-model="register.confirmPassword" name="confirmPassword"  tabindex="1" class="form-control" placeholder=" Confirm Password">
                                         </div>
 
-                                        <fieldset class="form-group">
-                                            <input type="checkbox" ng-model="register.subscription" id="checkbox1">
-                                            <label for="checkbox1">Subscribe me to the newsletter (recieve a 5% discount on all purchases!!)</label>
-                                        </fieldset>
+                                        <!--<fieldset class="form-group">-->
+                                            <!--<input type="checkbox" ng-model="register.subscription" id="checkbox1">-->
+                                            <!--<label for="checkbox1">Subscribe me to the newsletter (recieve a 5% discount on all purchases!!)</label>-->
+                                        <!--</fieldset>-->
 
                                         <div class="text-center">
                                             <button ng-click="submitRegistration()" class="btn yellow darken-4">Register</button>
