--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -125,6 +125,8 @@
 
 <br>
 
+
+
 <div align = "center">
 
     <div  class="well" style="height:500px;width:800px;" >
@@ -137,9 +139,23 @@
     </div>
 </div>
 
+<div id = "container" style = "width:100%">
 
+    <div id ="left" style = "float:left; width: 33%;">
+        <button>Test</button>
+    </div>
+    <div id = "middle" style = "float:left; width: 33%;">
+        <button>Test</button>
 
+    </div>
 
+</div>
+
+<div >
+    <canvas  id="doughnut" class="chart chart-doughnut"
+            chart-data="data" chart-labels="labels" height="68px">
+    </canvas>
+</div>
 
 
 
