optomized tradeController.js, removed a (hopefully) reduntant method

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -15,8 +15,8 @@
 
 <tbody>
 <tr>
-<td>${{availableView}}</td>
-<td>${{equityView}}</td>
+<td>${{available.toFixed(2)}}</td>
+<td>${{equity.toFixed(2)}}</td>
 <td>${{mMargin.toFixed(2)}}</td>
 <td>${{PLV.toFixed(2)}}</td>
 </tr>
