--- a/src/main/webapp/resources/js/views/AllUsers.html
+++ b/src/main/webapp/resources/js/views/AllUsers.html
@@ -1,18 +1,78 @@
-<table align="center">
-    <thead>
-    <tr>
-        <th>Username</th>
-        <th>Rank</th>
-        <th>Player Stats</th>
-    </tr>
-    </thead>
+<!--<table align="center">-->
+    <!--<thead>-->
+    <!--<tr>-->
+        <!--<th>Username</th>-->
+        <!--<th>Rank</th>-->
+        <!--<th>Player Stats</th>-->
+    <!--</tr>-->
+    <!--</thead>-->
 
-    <tbody>
-    <tr ng-repeat="x in allUsers">
-        <td>{{x.username}}</td>
-        <td>{{x.currentRank}}</td>
-        <td><button ng-click="getStats()" class="btn btn-success">Stats</button></td>
-    </tr>
-    </tbody>
+    <!--<tbody>-->
+    <!--<tr ng-repeat="x in allUsers">-->
+        <!--<td>{{x.username}}</td>-->
+        <!--<td>{{x.currentRank}}</td>-->
+        <!--<td><button ng-click="getStats()" class="btn btn-success">Stats</button></td>-->
+    <!--</tr>-->
+    <!--</tbody>-->
 
-</table>
+<!--</table>-->
+
+<!--<div class = "well" style="height:400px;width:400px;">-->
+    <!--<canvas id="pie" class="chart chart-pie"-->
+            <!--chart-data="data" chart-labels="labels" chart-options="options" height="248px" align="center">-->
+    <!--</canvas>-->
+<!--</div>-->
+
+<div class="container-fluid">
+    <div class="row">
+
+
+        <div class="col-md-4" align="center">
+            <div class="panel-heading">
+                <h4 align="center"><b>Who's got the big money?</b></h4>
+            </div>
+            <div class = "well" style="height:400px;width:400px;">
+                <canvas id="pie" class="chart chart-pie"
+                        chart-data="data" chart-labels="labels" chart-options="options" height="248px" >
+                </canvas>
+            </div>
+        </div>
+
+
+        <div class="col-md-4" align="center">
+            <div class="panel-heading">
+                <h4 align="center"><b>Players and their Current Rank</b></h4>
+            </div>
+            <div class = "well" style="height:400px;width:400px;">
+                <table align="center">
+                    <thead>
+                    <tr>
+                        <th>Username</th>
+                        <th>Rank</th>
+                        <th>Player Stats</th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <tr ng-repeat="x in allUsers">
+                        <td>{{x.username}}</td>
+                        <td>{{x.currentRank}}</td>
+                        <td><button ng-click="getStats()" class="btn btn-success">Stats</button></td>
+                    </tr>
+                    </tbody>
+
+                </table>
+            </div>
+        </div>
+        <div class="col-md-4" align="center">
+            <div class="panel-heading">
+                <h4 align="center"><b>Who's the Big Traders?</b></h4>
+            </div>
+            <div class = "well" style="height:400px;width:400px;">
+                <canvas id="bar" class="chart chart-bar"
+                        chart-data="trades" chart-labels="users" chart-options="options" height="248px">
+                </canvas>
+            </div>
+        </div>
+    </div>
+</div>
