Accepting challenge takes both players to the treade zone :):):)

--- a/src/main/webapp/resources/js/views/AllUsers.html
+++ b/src/main/webapp/resources/js/views/AllUsers.html
@@ -33,7 +33,7 @@
             </div>
             <div class = "well" style="height:400px;width:400px;">
                 <canvas id="pie" class="chart chart-pie"
-                        chart-data="data" chart-labels="labels" chart-options="options" height="248px" >
+                        chart-data="data" chart-labels="labels" chart-options="pieOptions" label="labels" height="248px" >
                 </canvas>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <div class="panel-heading">
                 <h4 align="center"><b>Players and their Current Rank</b></h4>
             </div>
-            <div class = "well" style="height:400px;width:400px;">
+            <div >
                 <table align="center">
                     <thead>
                     <tr>
