If a player is playing in a challenge, they cannot be challenged again until current challenge is over

--- a/src/main/webapp/resources/js/views/Online.html
+++ b/src/main/webapp/resources/js/views/Online.html
@@ -16,7 +16,8 @@
         <td>{{opponent.currentRank}}</td>
         <td><select ng-model="selectedTime" ng-options="t for t in gameTimes"></td>
         <td><select ng-model="selectedStake" ng-options="s for s in gameStakes"></td>
-        <td><button ng-click="challenge(opponent,selectedTime,selectedStake)" class="btn btn-success" >Challenge</button></td>
+        <td ng-show="opponent.busy"><button ng-disabled = "opponent.busy" ng-click="challenge(opponent,selectedTime,selectedStake)" class="btn btn-info" >Player Busy</button></td>
+        <td ng-show="!opponent.busy"><button ng-click="challenge(opponent,selectedTime,selectedStake)" class="btn btn-success" >Challenge</button></td>
 
     </tr>
 
