--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -6,10 +6,10 @@
 
 <thead>
 <tr>
-<th style = "background-color:#BDB76B;color:#ffffff;">Available</th>
-<th style = "background-color:#BDB76B;color:#ffffff;">Equity</th>
-<th style = "background-color:#BDB76B;color:#ffffff;">Margin</th>
-<th style = "background-color:#BDB76B;color:#ffffff;">Profit/Loss</th>
+<th >Available</th>
+<th >Equity</th>
+<th >Margin</th>
+<th >Profit/Loss</th>
 </tr>
 </thead>
 
