--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -62,7 +62,7 @@
                     <td height="60" class="col-xs-2">{{x.symbols}}</td>
                     <td height="60" class="col-xs-7">P/L :${{checkForOpenTrades(x).closingProfitLoss.toFixed(2)}}</td>
                     <td height="60" class="col-xs-3"ng-show='!check'><button class="btn btn-default btn-block btn-danger"ng-click="closeLiveTrade(x)"  >Close Live Position</button></td>
-                    <td height="60" class="col-xs-3"ng-show='check'><button class="btn btn-default btn-block btn-danger"ng-click="closeGameTrade(x)"  >Close Game Position</button></td>
+                    <td height="60" class="col-xs-3"ng-show='check'><button class="btn btn-default btn-block btn-warning"ng-click="closeGameTrade(x)"  >Close Game Position</button></td>
                 </tr>
                 </tbody>
             </table>
@@ -124,7 +124,9 @@
         </md-button>
 
     </md-content>
-    <button class="btn btn-default btn-block btn-info"ng-click="trade()"  >Open Position!!</button>
+    <button ng-show='!check' class="btn btn-default btn-block btn-info"ng-click="trade()"  >Open Position!!</button>
+    <button ng-show='check' class="btn btn-default btn-block btn-info"ng-click="gameTrade()"  >Open Position!!</button>
+
 
 </md-sidenav>
 
