Game timer implemented taking the duration selected when challenge sent multiply by 60 (into seconds) then format this via angular filter into minutes and seconds

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -26,6 +26,9 @@
     <div class="row">
         <div class="panel panel-default">
             <div class="panel-heading">
+                <h4 align="center"><b>{{$root.gameCounter | toMinSec}} remaining in this game!</b></h4>
+            </div>
+            <div class="panel-heading">
                 <h4 align="center" ng-if="activeTrades"><b>{{openTrades.length}} Trades currently open!!</b></h4>
                 <h4 align="center" ng-if="!activeTrades"><b>Choose a pair and make a trade now!!</b></h4>
             </div>
