--- a/src/main/webapp/resources/js/views/Stats.html
+++ b/src/main/webapp/resources/js/views/Stats.html
@@ -6,7 +6,7 @@
 
         <div class="col-md-4" align="center">
             <div class="panel-heading">
-                <h4 align="center"><b>Matches you Won {{$root.currentUser.firstName}}</b></h4>
+                <h4 align="center"><b>The games you won</b></h4>
             </div>
             <div >
                 <table align="center">
@@ -37,7 +37,7 @@
 
         <div class="col-md-4" align="center">
             <div class="panel-heading">
-                <h4 align="center"><b>Something here</b></h4>
+                <h4 align="center"><b>Your success rate at a glance!</b></h4>
             </div>
             <div class = "well" style="height:400px;width:400px;">
                 <canvas id="bar" class="chart chart-bar"
@@ -51,7 +51,7 @@
 
         <div class="col-md-4" align="center">
             <div class="panel-heading">
-                <h4 align="center"><b>Matches you Lost {{$root.currentUser.firstName}}</b></h4>
+                <h4 align="center"><b>The games you lost</b></h4>
             </div>
             <div >
                 <table align="center">
