--- a/src/main/webapp/resources/js/views/Online.html
+++ b/src/main/webapp/resources/js/views/Online.html
@@ -1,3 +1,8 @@
+<div ng-show='iAmLive' class="panel-heading">
+    <h4 align="center"><b>Your Challenge Has Been Sent</b></h4>
+    <h4 align="center"><b>Opponent Has {{$root.challengeValidTime | toMinSec}} remaining to accept</b></h4>
+</div>
+
 <table align="center">
     <thead>
     <tr>
