--- a/src/main/webapp/resources/js/views/Home.html
+++ b/src/main/webapp/resources/js/views/Home.html
@@ -76,8 +76,8 @@
 
                     <div class="well-block">
                         <h4 class="well-title">Rank</h4>
-                        <p class="well-text">Overdose on our tablets</p>
-                        <a ng-href="#/tabletCategory" class="btn default-color">Our range</a>
+                        <p class="well-text">Where are you compared to the other players</p>
+                        <a ng-href="#/tabletCategory" class="btn default-color">All Ranks</a>
                     </div>
 
                 </div>
@@ -85,7 +85,7 @@
         </div>
 
         <div ng-show="personalViewVisible" class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="well">
 
                     <div class="view overlay hm-white-slight">
@@ -96,32 +96,32 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Balance</h4>
+                        <h4 class="well-title">WINNINGS</h4>
                         <p class="well-text">View your balance</p>
-                        <a ng-href="#/laptopCategory" class="btn default-color">View </a>
+                        <a  ng-href="#/laptopCategory" class="btn default-color">View </a>
                     </div>
 
                 </div>
             </div>
 
-            <div class="col-md-6">
-                <div class="well">
+            <!--<div class="col-md-6">-->
+                <!--<div class="well">-->
 
-                    <div class="view overlay hm-white-slight">
-                        <img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">
-                        <a href="#">
-                            <div class="mask"></div>
-                        </a>
-                    </div>
+                    <!--<div class="view overlay hm-white-slight">-->
+                        <!--<img src="" style="height:220px " style="width:620px" class="img-fluid" alt="">-->
+                        <!--<a href="#">-->
+                            <!--<div class="mask"></div>-->
+                        <!--</a>-->
+                    <!--</div>-->
 
-                    <div class="well-block">
-                        <h4 class="well-title">Rank</h4>
-                        <p class="well-text">Overdose on our tablets</p>
-                        <a ng-href="#/tabletCategory" class="btn default-color">Our range</a>
-                    </div>
+                    <!--<div class="well-block">-->
+                        <!--<h4 class="well-title">Rank</h4>-->
+                        <!--<p class="well-text">Overdose on our tablets</p>-->
+                        <!--<a ng-href="#/tabletCategory" class="btn default-color">Our range</a>-->
+                    <!--</div>-->
 
-                </div>
-            </div>
+                <!--</div>-->
+            <!--</div>-->
         </div>
 
         <!--Personal View End-->
@@ -144,9 +144,9 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Balance</h4>
-                        <p class="well-text">View your balance</p>
-                        <a ng-href="#/laptopCategory" class="btn default-color">View </a>
+                        <h4 class="well-title">NO. OF SOLO TRADES</h4>
+                        <p class="well-text">HOW MUCH DID YOU PLAY THE MARKETS</p>
+                        <a ng-href="#/laptopCategory" class="btn default-color"></a>
                     </div>
 
                 </div>
@@ -163,9 +163,9 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Rank</h4>
-                        <p class="well-text">Overdose on our tablets</p>
-                        <a ng-href="#/tabletCategory" class="btn default-color">Our range</a>
+                        <h4 class="well-title">NET PROFIT AND LOSS</h4>
+                        <p class="well-text">are you up or down?</p>
+                        <a ng-href="#/tabletCategory" class="btn default-color"></a>
                     </div>
 
                 </div>
@@ -184,9 +184,9 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Balance</h4>
-                        <p class="well-text">View your balance</p>
-                        <a ng-href="#/laptopCategory" class="btn default-color">View </a>
+                        <h4 class="well-title">FAVOURITE TRADE</h4>
+                        <p class="well-text">Which Pair, Long or Short?</p>
+                        <a ng-href="#/laptopCategory" class="btn default-color"></a>
                     </div>
 
                 </div>
@@ -203,9 +203,9 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Rank</h4>
-                        <p class="well-text">Overdose on our tablets</p>
-                        <a ng-href="#/tabletCategory" class="btn default-color">Our range</a>
+                        <h4 class="well-title">LARGEST TRADE</h4>
+                        <p class="well-text">How exposed where you?</p>
+                        <a ng-href="#/tabletCategory" class="btn default-color"></a>
                     </div>
 
                 </div>
@@ -233,9 +233,9 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Balance</h4>
-                        <p class="well-text">View your balance</p>
-                        <a ng-href="#/laptopCategory" class="btn default-color">View </a>
+                        <h4 class="well-title">NO. MATCHES</h4>
+                        <p class="well-text">how busy where you?</p>
+                        <a ng-href="#/laptopCategory" class="btn default-color"></a>
                     </div>
 
                 </div>
@@ -252,9 +252,9 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Rank</h4>
-                        <p class="well-text">Overdose on our tablets</p>
-                        <a ng-href="#/tabletCategory" class="btn default-color">Our range</a>
+                        <h4 class="well-title">WIN/LOSS RATE</h4>
+                        <p class="well-text">Are you getting better?</p>
+                        <a ng-href="#/tabletCategory" class="btn default-color"></a>
                     </div>
 
                 </div>
@@ -273,9 +273,9 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Balance</h4>
-                        <p class="well-text">View your balance</p>
-                        <a ng-href="#/laptopCategory" class="btn default-color">View </a>
+                        <h4 class="well-title">TOTAL WINNINGS/LOSSES</h4>
+                        <p class="well-text">Can you steal the game stakes?</p>
+                        <a ng-href="#/laptopCategory" class="btn default-color"></a>
                     </div>
 
                 </div>
@@ -292,9 +292,9 @@
                     </div>
 
                     <div class="well-block">
-                        <h4 class="well-title">Rank</h4>
-                        <p class="well-text">Overdose on our tablets</p>
-                        <a ng-href="#/tabletCategory" class="btn default-color">Our range</a>
+                        <h4 class="well-title">CHALLENGES ACCEPTES/DECLINES</h4>
+                        <p class="well-text">Are you a player?</p>
+                        <a ng-href="#/tabletCategory" class="btn default-color"></a>
                     </div>
 
                 </div>
